[package]
name = "qqx"
version = "0.1.0"
authors = ["Denis Nevmerzhitskii <kastigarster@gmail.com>"]
edition = "2018"

[dependencies]
async-graphql = { version = "2.8.4", features = ["uuid", "chrono"] }
chrono = "0.4"
qqx-macros = { path = "qqx-macros", version = "=0.1.0" }
uuid = "0.8"

[workspace]
members = [
    "qqx-macros",
]
